# MidjourneyCli

./: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: publish.yml
midjourney_cli/: __init__.py  __main__.py  main.py
midjourney_cli/commands/: edit.py  imagine.py  info.py  task.py  video.py
midjourney_cli/core/: client.py  config.py  exceptions.py  output.py
tests/: conftest.py  test_client.py  test_commands.py  test_config.py  test_integration.py  test_output.py
